[package]
name = "ps-memorycard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
# cbc: Cipher Block Chaining cryptographic mode, https://docs.rs/cbc/latest/cbc/
cbc = "0.1"
chrono = { version = "0.4", default-features = false }
clap = { version = "4.0", features = ["derive"] }
# des: Data Encryption Standard, https://docs.rs/des/latest/des/
# This is the cryptographic standard used by the MagicGate authentication used by ps2 memory cards
# https://github.com/RustCrypto/block-ciphers
des = "0.8"
indicatif = "0.17"
rusb = "0.9"

[dev-dependencies]
mockall = "0.11"

[features]
# This feature is for running tests with a physical ps2 card attached
# https://stackoverflow.com/a/50568293
# `cargo test --features test-ps2-card`
# https://users.rust-lang.org/t/cargo-test-specifying-features/22819
test-ps2-card = []
